<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.PulsarLabs.ARMenu.ThankYouActivity"
    android:background="@color/kitchenPagePrimary"
    android:id="@+id/container_rl">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:weightSum="0.5">

            <TextView
                android:id="@+id/thankyou_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="36dp"
                android:gravity="center"
                android:keepScreenOn="true"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/kitchen_page_title_string"
                android:textColor="@color/colorFont"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/share_subtitle_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/thankyou_title_tv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp"
                android:textColor="@color/colorFont"
                android:textSize="20sp"
                android:gravity="center"
                android:fontFamily="sans-serif-light"
                android:text="@string/kitchen_page_subtitle_string" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:background="#5fa3d0">

                <TextView
                    android:id="@+id/share_message_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:padding="24dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/share_template" />

            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.35">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="0dp"
                android:background="@color/kitchenPageSecondary">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/plates"
                    android:layout_marginLeft="-80dp"
                    android:layout_marginStart="-80dp"
                    android:background="@drawable/plate_asset"/>
            </RelativeLayout>

            <Button
                android:id="@+id/place_another_order_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kitchen_btn_string"
                android:fontFamily="sans-serif-light"
                android:background="@color/colorWhite"
                android:layout_marginLeft="64dp"
                android:layout_marginRight="64dp"
                android:layout_marginBottom="32dp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                style="@style/Widget.AppCompat.Button"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:background="@color/kitchenPageSecondaryDark">
        </View>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/share_rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/circle_share"
        android:padding="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share_white_24dp" />

    </RelativeLayout>
</RelativeLayout>


