<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/titlePagePrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:weightSum="0.5">

            <ImageView
                android:id="@+id/anim_iv"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:background="@drawable/cloud_light_asset"
                android:layout_marginLeft="-100dp"
                android:layout_marginStart="-100dp"
                android:layout_marginTop="36dp" />

            <TextView
                android:id="@+id/app_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:keepScreenOn="true"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/app_name_string"
                android:textColor="@color/colorFont"
                android:textSize="56sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/app_subtitle_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/app_title_tv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp"
                android:textColor="@color/colorFont"
                android:textSize="20sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/app_experiment_string" />

            <ImageView
                android:id="@+id/info_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_info"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_margin="16dp"
                />

            <ImageView
                android:id="@+id/back_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:visibility="gone"
                android:layout_margin="16dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.35">

            <ImageView
                android:id="@+id/menu_iv"
                android:layout_width="67dp"
                android:layout_height="85dp"
                android:background="@drawable/menu_asset"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="-4dp"/>

            <Button
                android:id="@+id/order_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_btn_string"
                android:fontFamily="sans-serif-light"
                android:background="@color/colorWhite"
                android:layout_marginLeft="64dp"
                android:layout_marginRight="64dp"
                android:layout_marginBottom="32dp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                style="@style/Widget.AppCompat.Button"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:background="@color/titlePageSecondary">
        </View>
    </LinearLayout>
</RelativeLayout>