<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/restaurantPagePrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:weightSum="0.5">

            <TextView
                android:id="@+id/app_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:keepScreenOn="true"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/restaurant_page_title_string"
                android:textColor="@color/colorFont"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/app_subtitle_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/app_title_tv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp"
                android:textColor="@color/colorFont"
                android:textSize="20sp"
                android:gravity="center"
                android:fontFamily="sans-serif-light"
                android:text="@string/restaurant_page_subtitle_string" />

            <ImageView
                android:id="@+id/info_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_info"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_margin="16dp" />

            <ImageView
                android:id="@+id/back_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="16dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.35">

            <RelativeLayout
                android:layout_width="67dp"
                android:layout_height="85dp"
                android:id="@+id/desk"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:background="#757575">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/qr_code_asset"
                    android:layout_margin="12dp" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/waiter"
                android:layout_width="57dp"
                android:layout_height="49dp"
                android:layout_above="@id/desk"
                android:layout_alignLeft="@id/desk"
                android:layout_alignStart="@id/desk"
                android:background="@drawable/waiter_asset" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/anim_tv"
                android:text="+ Takeout"
                android:layout_toLeftOf="@id/waiter"
                android:layout_toStartOf="@+id/waiter"
                android:layout_alignTop="@id/waiter"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-light"
                android:textStyle="italic|bold"
                android:textColor="#69F0AE" />

            <Button
                android:id="@+id/order_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_btn_string"
                android:fontFamily="sans-serif-light"
                android:background="@color/colorWhite"
                android:layout_marginLeft="64dp"
                android:layout_marginRight="64dp"
                android:layout_marginBottom="32dp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                style="@style/Widget.AppCompat.Button"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:background="@color/restaurantPageSecondary">
        </View>
    </LinearLayout>
</RelativeLayout>